# rotor

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.rst  index.html  search-index.js  vagga.yaml
doc/: Makefile  conf.py  ecosystem.rst  faq.rst  glossary.rst  index.rst  loop_init.rst  state_machine.rst
examples/: tcp_echo_server.rs  telnet.rs
lazycell/: index.html  struct.AtomicLazyCell.html  struct.LazyCell.html
mio/: fn.would_block.html  index.html  sidebar-items.js  struct.Event.html  struct.Events.html  struct.EventsIter.html  struct.Poll.html  struct.PollOpt.html  struct.Ready.html  struct.Registration.html  struct.SetReadiness.html  struct.Token.html  trait.Evented.html
net2/: index.html  struct.TcpBuilder.html  struct.UdpBuilder.html
nix/: enum.Error.html  macro.convert_ioctl_res.html  macro.io.html  macro.ioc.html  macro.ioctl.html  macro.ior.html  macro.iorw.html  macro.iow.html  trait.NixPath.html  type.Result.html
quick_error/: index.html  macro.quick_error.html  struct.Context.html  trait.ResultExt.html
rotor/: EarlyScope.t.html  GenericScope.t.html  SpawnError.t.html  enum.Compose2.html  enum.SpawnError.html  enum.Void.html  enum.WakeupError.html  index.html  macro.rotor_compose.html  rotor_compose.m.html  sidebar-items.js  struct.Config.html  struct.EarlyScope.html  struct.EventSet.html  struct.Loop.html  struct.LoopInstance.html  struct.Notifier.html  struct.PollOpt.html  struct.Response.html  struct.Scope.html  struct.Time.html  struct.Timeout.html  struct.TimerError.html  trait.Evented.html  trait.GenericScope.html  trait.Machine.html  type.Slab.html
slab/: index.html  struct.Entry.html  struct.Iter.html  struct.IterMut.html  struct.Slab.html  struct.VacantEntry.html
src/: README.md  async.rs  (+23 more)
(+806 files in other folders)
