[package]
name = "rotor"
description = """
    The mio-based framework for doing I/O in simple and composable way
"""
license = "MIT"
readme = "README.rst"
keywords = ["io", "loop", "state", "machine", "mio"]
homepage = "http://github.com/tailhook/rotor"
version = "0.4.0"
authors = ["paul@colomiets.name"]

[dependencies]
mio = "0.5"
quick-error = "0.2.1"

[dev-dependencies]
argparse = "0.2.1"
nix = "0.4.2"
void = "0.0.5"

[lib]
name = "rotor"
path = "src/lib.rs"

