[package]
name = "rotor"
description = """
    The mio-based framework for doing I/O in simple and composable way
"""
license = "MIT"
readme = "README.rst"
keywords = ["io", "loop", "state", "machine", "mio"]
homepage = "http://github.com/tailhook/rotor"
documentation = "http://tailhook.github.com/rotor/"
version = "0.5.1"
authors = ["paul@colomiets.name"]

[dependencies]
mio = "0.5"
quick-error = "0.2.1"
time = "0.1.34"
log = "0.3.1"
void = "1.0.0"

[dev-dependencies]
argparse = "0.2.1"
nix = "0.4.2"
void = "1.0.0"

[features]
log_errors = []

[lib]
name = "rotor"
path = "src/lib.rs"

